# gui-python-webui-starter

./: .fuse_hidden00002c3500000005  .gitignore  README.md  TODOS.md  app.db  app.db-shm  app.db-wal  main.py  mypy.ini  package-lock.json  pyproject.toml  run.sh
backend/src/api/: __init__.py  dependencies.py  routes.py  schemas.py  server.py
backend/src/core/: __init__.py  app.py  bridge.py  config.py  container.py  database.py  tasks.py
backend/src/services/: __init__.py  base.py  database_service.py  document_service.py  graph_service.py  rust_cli_service.py  search_service.py  settings_service.py  system_integration_service.py  system_service.py  todo_service.py
backend/src/utils/: response.py
backend/src/web/: cytoscape.js  cytoscape.js.map  index.html  main.css  main.css.map  main.js  main.js.map  react.js  react.js.map  vendors.js
backend/tests/: test_api_server.py  test_bridge.py  test_concurrency.py  test_container.py  test_document_service.py  test_graph_service.py  test_rust_service.py  test_settings_service.py  test_tasks.py
cli-rs/file-analyzer/: Cargo.toml
cli-rs/file-analyzer/src/: main.rs
docs/: arch.md  be-core.md  build.md  comm.md  fe-core.md  layout.md  settings.md  sys-mon.md
frontend/: package-lock.json  package.json  package.json.bak  rspack.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
frontend/src/components/: ErrorBoundary.jsx  NotificationToast.jsx
frontend/src/core/: ServiceProvider.jsx  config.js  container.js  index.js
shared/: api.py  constants.py  utils.py
shared/types/: __init__.py
(+36 files in other folders)
