[project]
name = "gui-python-webui-starter"
version = "0.1.0"
description = "A starter for a Python GUI project using webui2 and uv."
authors = [
    {name = "Your Name", email = "you@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: License",
    "Operating System :: OS Independent",
]
dependencies = [
    "webui2",
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "psutil",
    "pydantic",
    "ruff",
    "mypy",
    "types-psutil>=7.2.2.20260408",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
